# pixelstudio

./: .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  RELEASE_NOTES_v1.md  RELEASE_READINESS.md  SECURITY.md  SHIP_GATE.md  TOOL-ENHANCEMENT-BRIEF.md  llm-sync-drive.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: errors.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs  analysis.rs  anchor.rs  asset.rs  bundle.rs  canvas.rs  clip.rs  export.rs  layer.rs  locomotion.rs  mod.rs  motion.rs  palette.rs  preset.rs  project.rs  provenance.rs  sandbox.rs  scene.rs  secondary_motion.rs  selection.rs  slice.rs  timeline.rs  validation.rs
apps/desktop/src-tauri/src/engine/: anchor.rs  asset_catalog.rs  canvas_state.rs  clip.rs  mod.rs  motion.rs  pixel_buffer.rs  preset.rs  quantize.rs  sandbox.rs  scene.rs  secondary_motion.rs  selection.rs  slice.rs  transform.rs
apps/desktop/src-tauri/src/persistence/: autosave.rs  mod.rs  preset_io.rs  project_io.rs  recovery.rs  scene_io.rs
apps/desktop/src-tauri/src/types/: api.rs  domain.rs  mod.rs
docs/: START_HERE.md  WHY_GLYPHSTUDIO.md  WORKFLOWS.md  roadmap-47-ai-copilot.md  scene-restore.md  stage-36-benchmark.md  stage-36-friction-log.md
scripts/: critique-sprite.mjs  dogfood-43-creature.mjs  dogfood-43-humanoid.mjs  dogfood-43-prop.mjs  dogfood-44-curves.mjs  dogfood-47-ollama.mjs  (+11 more)
(+253 files in other folders)
