[package]
name = "glyphstudio"
version = "1.0.0"
edition = "2021"
description = "Professional desktop sprite studio"

[lib]
name = "glyphstudio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "glyphstudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
png = "0.17"
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
